--- a/Projekt_Gruppe9_MotorTemperatur.ipynb
+++ b/Projekt_Gruppe9_MotorTemperatur.ipynb
@@ -36,10 +36,10 @@
    "source": [
     "\n",
     "### 1. Frame the Problem and Look at the Big Picture\n",
-    "    1. Define the objective of your project in your own words.\n",
-    "    2. Select a performance criteria for evaluation of the task.\n",
-    "    3. Explain in a paragraph how you would solve the problem manually.\n",
-    "    4. List assumptions that you made so far.\n",
+    "1. Define the objective of your project in your own words.\n",
+    "2. Select a performance criteria for evaluation of the task.\n",
+    "3. Explain in a paragraph how you would solve the problem manually.\n",
+    "4. List assumptions that you made so far.\n",
     "    "
    ]
   },
@@ -75,16 +75,21 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
     "4. Convert the data to a format you can easily manipulate (if required).\n",
     "5. Check the size and type of the data.\n",
+    "* .head(), .info(), describe()\n",
+    "* plot histogramm of each attribute\n",
+    "\n",
     "6. Sample a test set, put it aside, and never look at it (no data snooping!).\n",
+    "* Data > 100.000, Test ~1%\n",
+    "* train_set, test_set = train_test_split(housing, test_size=0.01, random_state=42)\n",
+    "\n",
     "7. (Sample a training set and a validation set. Only necessary if N-fold cross-validation is not used)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "633773a8",
    "metadata": {},
    "outputs": [
@@ -143,6 +148,7 @@
     "### 3. Explore the Data\n",
     "\n",
     "1. Create a copy of the training set for exploration (sample it down to a manageable size if necessary).\n",
+    "* data = df.copy()\n",
     "2. (Create a Jupyter Notebook for your data exploration.)\n",
     "3. Study each attribute and its characteristics\n",
     "    - name\n",
