--- a/Projekt_Gruppe9_MotorTemperatur.ipynb
+++ b/Projekt_Gruppe9_MotorTemperatur.ipynb
@@ -61,9 +61,8 @@
     "Zur Bewertung der Modellleistung wird die gebräuchliche Metrik für Regressionsaufgaben verwendet:\n",
     "\n",
     "- **Root Mean Square Error (RMSE):** Betonung größerer Fehler, empfindlich gegenüber Ausreißern, gut geeignet, wenn starke Abweichungen kritisch sind.\n",
-    "- **Mean Absolute Error (MAE):** Durchschnittlicher Fehler, robuster gegenüber Ausreißern, liefert eine intuitive Interpretation („um wie viel Grad liege ich im Mittel daneben?“).\n",
     "\n",
-    "**Ziel:** Minimierung beider Werte, wobei RMSE als Hauptoptimierungsmetrik dient.\n",
+    "**Ziel:** Minimierung des RMSE.\n",
     "\n",
     "\n",
     "\n",
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "49b3ef84",
    "metadata": {},
    "outputs": [],
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "633773a8",
    "metadata": {},
    "outputs": [
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "6c1e5c3b",
    "metadata": {},
    "outputs": [
@@ -370,7 +369,7 @@
        "4 -0.064317  0.037184  24.565397    18.326662  19.850639  0.208197          17  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "94c06724",
    "metadata": {},
    "outputs": [
@@ -586,7 +585,7 @@
        "max    3.071420e+01  2.610057e+02  8.100000e+01  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "baea749a",
    "metadata": {},
    "outputs": [
@@ -674,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "4440f06d",
    "metadata": {},
    "outputs": [
@@ -740,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "e265ef46",
    "metadata": {},
    "outputs": [
@@ -814,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "f5671f10-3fca-4000-b16f-13f632632b66",
    "metadata": {},
    "outputs": [
@@ -824,7 +823,7 @@
        "<Axes: xlabel='pm', ylabel='Count'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -867,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "2c39be2c-d0ad-4ab5-b887-79a9cdf8f1b0",
    "metadata": {},
    "outputs": [
@@ -890,7 +889,7 @@
        "Name: pm, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "16a3f583",
    "metadata": {},
    "outputs": [
@@ -956,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "d9e4da87",
    "metadata": {},
    "outputs": [
@@ -979,7 +978,7 @@
        "Name: motor_speed, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "0b91e67f-3e8e-4078-a336-883b7103ff49",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1031,7 @@
        "Name: power, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "d69b37ee",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1081,7 @@
        "Name: current_magnitude, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "38da5268-5c9c-428b-9480-aa509ad0a47e",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "199b30a6-e7b5-4159-bfbe-5200694bc307",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1283,7 @@
        "882919   5.000000e+01  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "3390f4d3",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1460,7 @@
        "882919   5.000000e+01          96.599929  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "8a9b068f-053d-4f06-9aae-377723f3e0e1",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1541,7 @@
        "        0.00631241]], shape=(1317507, 12))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "6d9b52a8",
    "metadata": {},
    "outputs": [
@@ -2027,7 +2026,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "5eed2a2c",
    "metadata": {},
    "outputs": [
@@ -2083,36 +2082,7 @@
    "id": "a19c6189",
    "metadata": {},
    "source": [
-    "Die Ergebnisse sehen auf den ersten Blick schon ganz gut aus. Im nächsten Schritt wird das trainierte lineare Regressionsmodell auf dem gesamten vorverarbeiteten Trainingsdatensatz angewendet, um Vorhersagen zu generieren. Zur quantitativen Beurteilung der Modellgüte werden die Fehlermaße Root Mean Squared Error (RMSE) und Mean Absolute Error (MAE) berechnet."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "f59a5748",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 7.24, MAE: 5.43\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "\n",
-    "# Use the trained linear regression model to make predictions on the prepared training data\n",
-    "lin_reg_predictions = lin_reg.predict(motor_prepared)\n",
-    "\n",
-    "# Calculate both RMSE and MAE\n",
-    "lin_mse = mean_squared_error(motor_pm_labels, lin_reg_predictions)\n",
-    "lin_rmse = np.sqrt(lin_mse)\n",
-    "lin_mae = mean_absolute_error(motor_pm_labels, lin_reg_predictions)\n",
-    "\n",
-    "print(\"RMSE: %.2f, MAE: %.2f\" % (lin_rmse, lin_mae))"
+    "Die Ergebnisse sehen auf den ersten Blick schon ganz gut aus. Im nächsten Schritt wird das trainierte lineare Regressionsmodell auf dem gesamten vorverarbeiteten Trainingsdatensatz angewendet, um Vorhersagen zu generieren."
    ]
   },
   {
@@ -2133,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "fb856b0e",
    "metadata": {},
    "outputs": [],
@@ -2182,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "fcaef72a",
    "metadata": {},
    "outputs": [
@@ -2197,6 +2167,7 @@
     }
    ],
    "source": [
+    "# cross-validate Model\n",
     "lin_reg_results = evaluate_model_crossFold(lin_reg, motor_prepared, motor_pm_labels, cv=5, display=True)"
    ]
   },
@@ -2205,14 +2176,12 @@
    "id": "76b48074",
    "metadata": {},
    "source": [
-    "# todo\n",
-    "\n",
-    "unterschiede predict / crossEval erklären, speichern"
+    "# todo\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "77575e97",
    "metadata": {},
    "outputs": [
@@ -2222,7 +2191,7 @@
        "['models/lin_reg.pkl']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2234,8 +2203,7 @@
     "lin_reg_model_package = {\n",
     "    \"model\": lin_reg,\n",
     "    \"hyperparams\": lin_reg.get_params(),\n",
-    "    \"cv_results\": lin_reg_results,\n",
-    "    \"predictions\": lin_reg_predictions\n",
+    "    \"cv_results\": lin_reg_results\n",
     "}\n",
     "\n",
     "# save Model\n",
@@ -2244,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "id": "8c0de197",
    "metadata": {},
    "outputs": [],
@@ -2267,7 +2235,6 @@
     "        - \"model\": the trained model (e.g., RandomForestRegressor)\n",
     "        - \"hyperparams\": hyperparameters used during training\n",
     "        - \"cv_results\": cross-validation scores\n",
-    "        - \"predictions\": predictions on the training set\n",
     "\n",
     "    Example usage:\n",
     "    ----------------\n",
@@ -2275,13 +2242,14 @@
     "    model = package[\"model\"]\n",
     "    params = package[\"hyperparams\"]\n",
     "    scores = package[\"cv_results\"]\n",
-    "    preds = package[\"predictions\"]\n",
     "    \"\"\"\n",
     "    if not os.path.exists(model_path):\n",
     "        raise FileNotFoundError(f\"Model package not found at: {model_path}\")\n",
     "\n",
     "    loaded_package = joblib.load(model_path)\n",
-    "    return loaded_package"
+    "    return loaded_package\n",
+    "\n",
+    "package = load_model_package(\"models/forest_reg.pkl\")"
    ]
   },
   {
@@ -2295,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "id": "f0bcae4e",
    "metadata": {},
    "outputs": [
@@ -2723,7 +2691,7 @@
        "RandomForestRegressor(n_estimators=3, random_state=42)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2740,33 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "769bc380",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 0.35, MAE: 0.05\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Use the trained random forest model to make predictions on the prepared training data\n",
-    "forest_reg_predictions = forest_reg.predict(motor_prepared)\n",
-    "\n",
-    "# Calculate both RMSE and MAE\n",
-    "forest_mse = mean_squared_error(motor_pm_labels, forest_reg_predictions)\n",
-    "forest_rmse = np.sqrt(forest_mse)\n",
-    "forest_mae = mean_absolute_error(motor_pm_labels, forest_reg_predictions)\n",
-    "\n",
-    "print(\"RMSE: %.2f, MAE: %.2f\" % (forest_rmse, forest_mae))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "id": "397f0d95",
    "metadata": {},
    "outputs": [
@@ -2785,7 +2727,7 @@
        "['models/forest_reg.pkl']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2799,8 +2741,7 @@
     "forest_reg_model_package = {\n",
     "    \"model\": forest_reg,\n",
     "    \"hyperparams\": forest_reg.get_params(),\n",
-    "    \"cv_results\": forest_reg_results,\n",
-    "    \"predictions\": forest_reg_predictions\n",
+    "    \"cv_results\": forest_reg_results\n",
     "}\n",
     "\n",
     "# save Model\n",
@@ -2814,7 +2755,50 @@
    "source": [
     "# todo\n",
     "\n",
-    "unterschiede predict / crossEval erklären"
+    "unterschiede crossEval erklären"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9a3d880",
+   "metadata": {},
+   "source": [
+    "7. Analyze the most significant parameters for each model\n",
+    "\n",
+    "→ Was ist gemeint?\n",
+    "\n",
+    "Untersuche, welche Eingabefeatures (Spalten) den größten Einfluss auf die Vorhersage des jeweiligen Modells haben.\n",
+    "\n",
+    "Beispiel:\n",
+    "\n",
+    "    Bei einem Random Forest kannst du feature_importances_ verwenden.\n",
+    "\n",
+    "    Bei einer linearen Regression sagen dir die Koeffizienten, wie stark ein Feature die Zielgröße beeinflusst.\n",
+    "\n",
+    "    Bei einem ANN (neuronalen Netz) ist das schwieriger, aber mit Techniken wie Permutation Importance oder SHAP-Werten machbar.\n",
+    "\n",
+    "Ziel: Verstehen, auf welche Signale dein Modell am meisten reagiert.\n",
+    "8. Analyze the types of errors the models make\n",
+    "\n",
+    "→ Was ist gemeint?\n",
+    "\n",
+    "Schaue dir an, wo und wann das Modell besonders schlecht vorhersagt, z. B.:\n",
+    "\n",
+    "    Macht es bei hohen Temperaturen größere Fehler?\n",
+    "\n",
+    "    Sind die Fehler bei bestimmten Profilen (profile_id) systematisch höher?\n",
+    "\n",
+    "    Unterschätzt oder überschätzt es generell?\n",
+    "\n",
+    "Typische Methoden:\n",
+    "\n",
+    "    Scatterplot: Vorhersage vs. Ist-Wert (y_pred vs. y_true)\n",
+    "\n",
+    "    Histogramm der Residuen (Fehler)\n",
+    "\n",
+    "    Fehleranalyse nach Subgruppen: z. B. mittlere Abweichung pro profile_id\n",
+    "\n",
+    "Ziel: Herausfinden, wo dein Modell Schwächen hat – z. B. bei Randwerten, Ausreißern oder bestimmten Bedingungen."
    ]
   },
   {
