--- a/Projekt_Gruppe9_MotorTemperatur.ipynb
+++ b/Projekt_Gruppe9_MotorTemperatur.ipynb
@@ -4064,6 +4064,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6ca5447-219f-406b-a5f3-cd580213991f",
+   "metadata": {},
+   "source": [
+    "##### Schritt 1: Randomisierte Parameter-Erkundung\n",
+    "\n",
+    "Im ersten Schritt kommt `RandomizedSearchCV` zum Einsatz. Dabei werden zufällig ausgewählte Kombinationen \n",
+    "von Hyperparametern getestet – bei geringem Rechenaufwand. Dieser Ansatz ist besonders effizient, \n",
+    "wenn man nur begrenzt viele Modelltrainings durchführen kann oder möchte."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f10f602d",
@@ -4552,6 +4564,23 @@
     "forest_rnd_search = RandomizedSearchCV(pipeline, param_distributions=param_distribs,\n",
     "                                n_iter=3, cv=2, scoring='neg_mean_squared_error', random_state=42)\n",
     "forest_rnd_search.fit(motor, motor_pm_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3650ccbc-7a2c-46eb-a624-56d5a009463d",
+   "metadata": {},
+   "source": [
+    "Eräuterung der Parameter:\n",
+    "\n",
+    " - **`n_estimators`**: Anzahl der Entscheidungsbäume. Klein gewählt (1–4) für schnelle Modellläufe.\n",
+    " - **`max_features`**: Anzahl der Merkmale, die für jeden Split berücksichtigt werden. Wertebereich: 1–6.\n",
+    " - **`n_iter=3`**: Testet 3 zufällige Kombinationen aus dem Parameterraum.\n",
+    " - **`cv=2`**: Zwei-Fold-Cross-Validation zur Effizienzsteigerung.\n",
+    " - **`scoring='neg_mean_squared_error'`**: Bewertet die Modelle anhand des mittleren quadratischen Fehlers.\n",
+    "\n",
+    "Mit diesem Setup lassen sich schnell vielversprechende Parameterbereiche identifizieren, \n",
+    "die sich anschließend für ein gezieltes Feintuning mit **GridSearchCV** eignen"
    ]
   },
   {
@@ -5105,6 +5134,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48026935-918d-4ba2-86f3-04ea4d69d362",
+   "metadata": {},
+   "source": [
+    "Eräuterung der Parameter:\n",
+    "\n",
+    "- **`regressor__n_estimators`**: Anzahl der Entscheidungsbäume – getestet werden die Werte `[1, 2]`, \n",
+    "  da diese in der RandomizedSearch gute Ergebnisse zeigten.\n",
+    "- **`regressor__max_features`**: Anzahl der Merkmale, die pro Split berücksichtigt werden. \n",
+    "  Hier werden `[1, 3, 7]` getestet – also eine Variation von sehr begrenzter bis vollständiger Merkmalssicht.\n",
+    "- **`magnitude_attrib_adder__add_current_magnitude`**: Einfluss eines zusätzlichen Attributs aus der Pipeline \n",
+    "  (Feature Engineering). Sowohl `True` als auch `False` werden getestet.\n",
+    "\n",
+    "Diese Kombination ergibt **2 × 3 × 2 = 12 Modellkonfigurationen**, die jeweils mit 2-facher Cross-Validation bewertet werden."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "id": "36d7d105",
@@ -5127,6 +5173,16 @@
    ],
    "source": [
     "print_search_summary(forest_grid_search)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f396f3e-3f34-4702-a0e2-76ff99206c41",
+   "metadata": {},
+   "source": [
+    "Durch diese systematische Suche lassen sich die besten Hyperparameter-Kombinationen für das RandomForest-Modell \n",
+    "in Kombination mit der Vorverarbeitung finden. Das Ergebnis bietet eine solide Grundlage für eine finale Modellbewertung \n",
+    "oder den Einsatz im produktiven Umfeld."
    ]
   },
   {
@@ -5252,7 +5308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5266,7 +5322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
