--- a/Projekt_Gruppe9_MotorTemperatur.ipynb
+++ b/Projekt_Gruppe9_MotorTemperatur.ipynb
@@ -1041,7 +1041,7 @@
    "source": [
     "Die **lineare Regression** wird als einfaches, schnelles und gut interpretierbares Baseline-Modell eingesetzt. Sie erlaubt eine erste Einschätzung, ob die zu modellierende Zielgröße bereits durch lineare Zusammenhänge gut beschrieben werden kann.\n",
     "\n",
-    "Die lineare Regression zeigt in der Kreuzvalidierung ein sehr stabiles Verhalten: Die RMSE-Werte liegen eng beieinander mit einem Mittelwert von 15.62 und einer minimalen Standardabweichung von 0.012. Der mittlere absolute Fehler liegt von der Größenordnung bereits in der Nähe der Ziel-Toleranz. \n",
+    "Die lineare Regression zeigt in der Kreuzvalidierung ein sehr stabiles Verhalten: Die RMSE-Werte liegen eng beieinander mit einem Mittelwert von 15.63 und einer minimalen Standardabweichung von 0.012.\n",
     "\n",
     "Das Modell wird gemeinsam mit seinen Hyperparametern und CV-Ergebnissen gespeichert.\n"
    ]
@@ -1133,7 +1133,7 @@
     "\n",
     "**Random Forest** ist ein leistungsstarkes, nichtlineares Ensemblemodell, das aus vielen Entscheidungsbäumen besteht. Jeder Baum lernt auf einer zufälligen Teilmenge der Daten und trifft eine eigene Vorhersage – das endgültige Ergebnis ist der Durchschnitt aller Bäume. Dadurch ist das Modell robust gegenüber Ausreißern und Überanpassung und kann auch komplexe, nichtlineare Zusammenhänge gut abbilden.\n",
     "\n",
-    "Der Parameter `n_estimators` wurde bewusst etwas kleiner gewählt, um die Rechenzeit zu begrenzen. Die gewählte Einstellung stellt somit einen Kompromiss zwischen Modellgüte und Effizienz dar."
+    "Der Parameter `n_estimators` und die Anzahl der Folds `cv` wurde bewusst etwas kleiner gewählt, um die Rechenzeit zu begrenzen. Die gewählte Einstellung stellt somit einen Kompromiss zwischen Modellgüte und Effizienz dar."
    ]
   },
   {
@@ -1180,7 +1180,7 @@
     "print(\"Performance RMSE: \", forest_reg_rmse)\n",
     "\n",
     "# cross-validate Model\n",
-    "forest_reg_results = evaluate_model_crossFold(forest_reg, motor_prepared, motor_pm_labels, cv=5, display=True)\n",
+    "forest_reg_results = evaluate_model_crossFold(forest_reg, motor_prepared, motor_pm_labels, cv=3, display=True)\n",
     "\n",
     "\n",
     "# Bundle everything in one object\n",
@@ -1199,11 +1199,11 @@
    "id": "74d52117",
    "metadata": {},
    "source": [
-    "Das Random-Forest-Modell erzielt mit einem RMSE von **3.06** auf dem Gesamtdatensatz eine deutlich bessere Vorhersagegenauigkeit als die lineare Regression (RMSE = 15.6). Auch in der Kreuzvalidierung bleibt die Modellgüte mit einem durchschnittlichen RMSE von **6.12** und einem MAE von **3.04** klar überlegen.\n",
+    "Das Random-Forest-Modell erzielt mit einem RMSE von **1.97** auf dem Gesamttrainingsdatensatz eine deutlich bessere Vorhersagegenauigkeit als die lineare Regression (RMSE = 15.63). Auch in der Kreuzvalidierung bleibt die Modellgüte mit einem durchschnittlichen RMSE von **4.74** und einem MAE von **2.35** der linearen Regressionklar überlegen. Der mittlere absolute Fehler liegt von der Größenordnung bereits in der Nähe der Ziel-Toleranz. \n",
     "\n",
-    "Allerdings ist die Differenz zwischen Trainings- und Validierungsfehler auffällig groß – ein Hinweis auf **Overfitting**: Das Modell passt sich stark an die Trainingsdaten an, verliert aber an Generalisierungsfähigkeit. Mögliche Gegenmaßnahmen wären eine Reduktion der Modellkomplexität, Regularisierung oder die Verwendung eines größeren Trainingsdatensatzes.\n",
+    "Allerdings ist die Differenz zwischen Trainings- und Validierungsfehler (1.97 zu 4.74) auffällig groß – ein Hinweis auf **Overfitting**: Das Modell passt sich stark an die Trainingsdaten an, verliert aber an Generalisierungsfähigkeit. Mögliche Gegenmaßnahmen wären eine Reduktion der Modellkomplexität, Regularisierung oder die Verwendung eines größeren Trainingsdatensatzes.\n",
     "\n",
-    "Vor dem Feintuning wird ein Neuronales-Netz (`ANN`) getestet.\n"
+    "Vor dem Feintuning wird noch ein Neuronales-Netz (`ANN`) getestet.\n"
    ]
   },
   {
@@ -1215,7 +1215,7 @@
     "\n",
     "**Künstliche neuronale Netze (ANN)** sind von der Struktur biologischer Nervensysteme inspiriert und bestehen aus mehreren Schichten miteinander verbundener künstlicher Neuronen. Sie sind in der Lage, hochkomplexe und nichtlineare Zusammenhänge in den Daten zu erfassen und liefern oft sehr gute Ergebnisse bei ausreichend großen und vielfältigen Datensätzen. ANNs sind allerdings rechenintensiv, benötigen sorgfältige Hyperparameterabstimmung und sind in ihrer Struktur schwer interpretierbar.\n",
     "\n",
-    "Der Parameter `hidden_layer_size` wurde bewusst etwas kleiner gewählt, um die Rechenzeit zu begrenzen. Einstellung stellt somit einen Kompromiss zwischen Modellgüte und Effizienz dar.\n",
+    "Der Parameter `hidden_layer_size` und die Anzahl der Folds `cv` wurde bewusst etwas kleiner gewählt, um die Rechenzeit zu begrenzen. Die verfügbaren Resourcen ermöglichen kein umfangreicheres Training bei vertretbarem Zeitbedarf (getetstet mit *max_iter=600, cv=5*; Abgebrochen nach +8h).\n",
     "\n",
     "1. Modell initalisieren & trainieren"
    ]
@@ -1231,7 +1231,7 @@
     "ann_reg = MLPRegressor(\n",
     "    hidden_layer_sizes=(10,),  # one hidden layer with 10 Neuronen\n",
     "    solver='adam',\n",
-    "    max_iter=600,\n",
+    "    max_iter=300,\n",
     "    random_state=42\n",
     ")\n",
     "\n",
@@ -1261,7 +1261,7 @@
     "print(\"Performance RMSE: \", ann_rmse)\n",
     "\n",
     "# Cross-validate the ANN model\n",
-    "ann_results = evaluate_model_crossFold(ann_reg, motor_prepared, motor_pm_labels, cv=5, display=True)\n",
+    "ann_results = evaluate_model_crossFold(ann_reg, motor_prepared, motor_pm_labels, cv=3, display=True)\n",
     "\n",
     "# Bundle everything in one object\n",
     "ann_model_package = {\n",
@@ -1279,9 +1279,15 @@
    "id": "5bc0b3ea",
    "metadata": {},
    "source": [
-    "Das ANN erzielt eine mittlere RMSE von etwa **13,43** und eine mittlere absolute Abweichung (MAE) von ca. **10,24**. Während des Trainings wird die Warnung ausgegeben, dass die maximale Anzahl von 500 Iterationen erreicht wurde, ohne dass der Optimierer konvergierte. Dies deutet darauf hin, dass das Modell nicht vollständig trainiert wurde und die Leistung noch verbessert werden könnte, wenn mehr Rechenressourcen zur Verfügung stünde.\n",
+    "Das ANN erzielt einen mittleren RMSE von etwa **13,43** und eine mittlere absolute Abweichung (MAE) von ca. **10,24**. \n",
     "\n",
-    "Trotz dieser Limitierung schneidet das ANN besser ab als die lineare Regression, die mit einer mittleren RMSE von ca. **15,62** und einer MAE von etwa **12,92** etwas schlechtere Vorhersagen liefert.\n",
+    "Die `ConvergenceWarning` vom MLPClassifier deutet darauf hin, dass die Konvergenzgrenze nicht erreicht worden ist, da der stochastische Optimierer innerhalb der maximalen Iterationen keinen optimalen Zustand gefunden hat (Auch bei *max_iter=600* wurde keine Konvergenz erreicht). Gründe könnten sein:\n",
+    "\n",
+    "- Eine zu geringe max_iter sein, die man normalerweise erhöhen würde. Dies ist jedoch aufgrund begrenzter Rechen-Ressourcen nicht möglich.\n",
+    "- Eine unpassende Lernrate ursächlich sein. Die Suche nach einer besseren Einstellung wird daher ins Feintuning verschoben.\n",
+    "- Die Komplexität des Datensatzes wäre ein nicht direkt beeinflussbarer Faktor.\n",
+    "\n",
+    "Trotz dieser Limitierung schneidet das ANN etwas besser ab als die lineare Regression, die mit einer mittleren RMSE von ca. **15,62** und einer MAE von etwa **12,92** etwas schlechtere Vorhersagen liefert.\n",
     "\n",
     "Im Vergleich dazu übertrifft der Random Forest beide Modelle deutlich mit einer mittleren RMSE von ca. **6,12** und einer MAE von etwa **3,04**. Dies zeigt, dass der Random Forest komplexe Zusammenhänge im Datensatz wesentlich besser abbilden kann und insgesamt die beste Vorhersagegenauigkeit erreicht.\n",
     "\n",
@@ -1394,7 +1400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature importance direkt aus dem Modell\n",
+    "# Feature importance directly from model\n",
     "feature_importance_rf = pd.Series(\n",
     "    forest_reg.feature_importances_, \n",
     "    index=final_features\n",
@@ -1420,7 +1426,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Permutation importance: langsam, aber für ANN notwendig\n",
+    "# Permutation importance, nessecary for ANN\n",
     "result = permutation_importance(\n",
     "    ann_reg, motor_prepared, motor_pm_labels, \n",
     "    n_repeats=10, random_state=42, n_jobs=-1\n",
@@ -1535,6 +1541,8 @@
    "outputs": [],
    "source": [
     "# Plot analysis for all 3 models\n",
+    "print(\"Modell Diagnose:\")\n",
+    "\n",
     "plot_model_diagnostics(motor_pm_labels, lin_reg_predictions, \"Lineare Regression\")\n",
     "\n",
     "plot_model_diagnostics(motor_pm_labels, forest_predictions, \"Random Forest\")\n",
@@ -1595,7 +1603,9 @@
     "\n",
     "Unabhängig davon werden die **Temperaturmerkmale immer entfernt**, da die Zielsetzung explizit vorsieht, ein Modell ohne temperaturabhängige Eingangsdaten zu entwickeln.\n",
     "\n",
-    "Bezüglich der **Feature-Engineering-Komponente `current_magnitude`** zeigte die Analyse der Feature-Relevanz keine eindeutige Tendenz. Daher wird der Nutzen im Rahmen des Hyperparameter-Tunings explizit getestet."
+    "Bezüglich der **Feature-Engineering-Komponente `current_magnitude`** zeigte die Analyse der Feature-Relevanz keine eindeutige Tendenz. Daher wird der Nutzen im Rahmen des Hyperparameter-Tunings explizit getestet.\n",
+    "\n",
+    "Aufgrund der verfügbaren Rechenresourcen wird die Evauation auf 3 Folds begrenzt."
    ]
   },
   {
@@ -1613,7 +1623,7 @@
     "lin_reg_grid_search = GridSearchCV(\n",
     "    pipeline,\n",
     "    param_grid,\n",
-    "    cv=2,\n",
+    "    cv=3,\n",
     "    scoring=\"neg_mean_squared_error\",\n",
     "    return_train_score=True,\n",
     ")\n",
@@ -1626,7 +1636,7 @@
    "id": "fbb9d2f3",
    "metadata": {},
    "source": [
-    "Dies ergibt **A × B × C = D Modellkonfigurationen**, die jeweils mit XXX-facher Cross-Validation bewertet werden."
+    "Dies ergibt **2 Modellkonfigurationen**, die jeweils mit 5-facher Cross-Validation bewertet werden."
    ]
   },
   {
@@ -1676,7 +1686,7 @@
    "id": "4fea85af",
    "metadata": {},
    "source": [
-    "Die Lineare Regression kommt also **mit** dem Feature `current_magnitude` auf etwas bessere Vorhersagen (RMSE: 15,73 zu 15,63)."
+    "Die Lineare Regression kommt also **mit** dem Feature `current_magnitude` auf etwas bessere Vorhersagen (RMSE: 15,63 satt 15,73)."
    ]
   },
   {
@@ -1700,7 +1710,8 @@
     "\n",
     " - `n_estimators`: Anzahl der Entscheidungsbäume\n",
     " - `max_features`: Anzahl der Features, die für jeden Split berücksichtigt werden\n",
-    " - `n_iter`: Anzahl zufällige Kombinationen aus dem Parameterraum"
+    " - `n_iter`: Anzahl zufällige Kombinationen aus dem Parameterraum (Aufgrund geringer Rechenresourcen eingegrenzt)\n",
+    " - `cv`: Anzahl der Folds in der Corss-Validation. (Aufgrund geringer Rechenresourcen stark eingegrenzt)"
    ]
   },
   {
@@ -1758,8 +1769,8 @@
    "source": [
     "param_grid = {\n",
     "    \"regressor\": [RandomForestRegressor(random_state=42)],\n",
-    "    \"regressor__n_estimators\": [1, 2],\n",
-    "    \"regressor__max_features\": [1, 3, 7],\n",
+    "    \"regressor__n_estimators\": [5, 7],\n",
+    "    \"regressor__max_features\": [3, 7],\n",
     "    \"magnitude_attrib_adder__add_current_magnitude\": [True, False],\n",
     "}\n",
     "\n",
@@ -1778,7 +1789,7 @@
    "id": "a153ca20",
    "metadata": {},
    "source": [
-    "Dies ergibt **A × B × C = D Modellkonfigurationen**, die jeweils mit XXX-facher Cross-Validation bewertet werden."
+    "Dies ergibt **A × B × C = D Modellkonfigurationen**, die jeweils mit 3-facher Cross-Validation bewertet werden."
    ]
   },
   {
@@ -1809,7 +1820,8 @@
     "Parameter:\n",
     "\n",
     " - `hidden_layer_sizes`: Definiert die Struktur des Netzes (Neuronen, Schichten)\n",
-    " - `alpha`: L2 Regularisierungsparameter. Beeinflusst Over-/Underfitting"
+    " - `alpha`: L2 Regularisierungsparameter. Beeinflusst Over-/Underfitting\n",
+    " - `cv`und `n_iter` Aufgrund der verfügbaren Resourcen noch stärker reduziert (Random Forest scheint ein vielversprechenderes Modell zu sein)"
    ]
   },
   {
@@ -1820,7 +1832,7 @@
    "outputs": [],
    "source": [
     "param_distribs = {\n",
-    "    \"regressor\": [MLPRegressor(random_state=42, max_iter=600)],\n",
+    "    \"regressor\": [MLPRegressor(random_state=42, max_iter=300)],\n",
     "    \"regressor__hidden_layer_sizes\": [(5,), (10,), (20,), (50,), (100,)],\n",
     "    \"regressor__alpha\": uniform(0.001, 0.01)\n",
     "}\n",
@@ -1828,7 +1840,7 @@
     "ann_rnd_search = RandomizedSearchCV(\n",
     "    pipeline,\n",
     "    param_distributions=param_distribs,\n",
-    "    n_iter=5,\n",
+    "    n_iter=4,\n",
     "    cv=3,\n",
     "    scoring=\"neg_mean_squared_error\",\n",
     "    random_state=42,\n",
@@ -1862,9 +1874,9 @@
    "outputs": [],
    "source": [
     "param_grid = {\n",
-    "    \"regressor\": [MLPRegressor(random_state=42, max_iter=600)],\n",
-    "    \"regressor__hidden_layer_sizes\": [(10,), (20,)],\n",
-    "    \"regressor__alpha\": [0.0001, 0.001],  # Regularization\n",
+    "    \"regressor\": [MLPRegressor(random_state=42, max_iter=300)],\n",
+    "    \"regressor__hidden_layer_sizes\": [(5,), (10,)],\n",
+    "    \"regressor__alpha\": [0.0005, 0.001],  # Regularization\n",
     "    \"magnitude_attrib_adder__add_current_magnitude\": [True, False],\n",
     "}\n",
     "\n",
@@ -1883,7 +1895,7 @@
    "id": "4175437a",
    "metadata": {},
    "source": [
-    "Dies ergibt **A × B × C = D Modellkonfigurationen**, die jeweils mit XXX-facher Cross-Validation bewertet werden."
+    "Dies ergibt **A × B × C = D Modellkonfigurationen**, die jeweils mit 3-facher Cross-Validation bewertet werden."
    ]
   },
   {
@@ -1954,8 +1966,7 @@
    "source": [
     "#### Modellwahl und finale Evaluation\n",
     "\n",
-    "Das Modell **XXX** zeigt mit YYY die besten Ergebnisse mit der geringsten Fehlerquote und stabileren Vorhersagen im Vergleich zu den Alternativen.\n",
-    "\n",
+    "Das Modell **XXX** zeigt mit YYY die besten Ergebnisse mit dem geringsten Fehler im Vergleich zu den Alternativen.\n",
     "Zur Abschätzung des Generalisierungsfehlers wird das finale Modell abschließend auf dem separaten Testdatensatz evaluiert. \n"
    ]
   },
@@ -1971,6 +1982,10 @@
     "X_test = strat_test_set.drop(\"pm\", axis=1)\n",
     "y_test = strat_test_set[\"pm\"].copy()\n",
     "\n",
+    "# The 'final_model' is a trained Pipeline from GridSearchCV's best_estimator_.\n",
+    "# When 'predict()' is called, its internal transformers\n",
+    "# automatically use their 'transform()' method [not 'fit_transform()'].\n",
+    "# Thus, 'X_test' should be the raw, untransformed test data.\n",
     "final_predictions = final_model.predict(X_test)\n",
     "\n",
     "final_mse = mean_squared_error(y_test, final_predictions)\n",
