--- a/Projekt_Gruppe9_MotorTemperatur.ipynb
+++ b/Projekt_Gruppe9_MotorTemperatur.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "## Aufgabenstellung:\n",
     "\n",
-    "Aufgabe des Projekts ist es, auf Grundlage des vorliegenden Datensatzes die Temperatur des Permanentmagneten eines datas vorherzusagen.\n",
+    "Aufgabe des Projekts ist es, auf Grundlage des vorliegenden Datensatzes die Temperatur des Permanentmagneten eines E-Motors vorherzusagen.\n",
     "Zur Umsetzung dieser Regressionsaufgabe werden zwei vorgegebene Verfahren eingesetzt: Random Forest sowie ANN. Zusätzlich wird ein drittes, selbst gewähltes Verfahren zur Modellierung und zum Vergleich herangezogen.\n",
     "\n",
     "\n",
@@ -41,7 +41,7 @@
     "\n",
     "Ziel des Projekts ist es, auf Basis der Messwerte von Spannung (`u_d`, `u_q`) und Strom (`i_d`, `i_q`) in dq-Koordinaten sowie weiterer verfügbarer Sensordaten (z. B. Drehmoment und Drehzahl) die Temperatur des Permanentmagneten (`pm`) vorherzusagen. Auf die Verwendung von Temperaturmesswerten benachbarter Motorbauteile soll dabei nach Möglichkeit verzichtet werden, da diese nicht in jeder Anwendung zwangsläufig zur Verfügung stehen. Ein präzises Temperaturmodell soll die frühzeitige Erkennung potenziell schädlicher Überhitzung ermöglichen, bevor reale Schäden auftreten, und ist damit ein wichtiger Baustein für eine vorausschauende Wartung und den Schutz des Motors.\n",
     "\n",
-    "**Business Objective:** Vermeidung von Leistungseinbussen Motorschäden durch rechtzeitiges Erkennen kritischer Temperaturen.\n",
+    "**Geschäftsziel (Business Objective):** Vermeidung von Leistungseinbußen/Motorschäden durch rechtzeitiges Erkennen kritischer Temperaturen.\n",
     "\n",
     "Die Literatur weist darauf hin, dass Abweichungen von etwa 10 % oberhalb etablierter Temperaturgrenzen zu gefährlichen Zuständen, Motorschäden oder erheblichen Leistungsminderungen führen können. Studien zeigen, dass präzise Temperaturprognosen mit einer Abweichung von weniger als 5 °C notwendig sind, um frühzeitig thermische Überlastungen zu erkennen und eine zuverlässige Lebensdauer der Permanentmagneten zu gewährleisten. Gängige Thermokoppler mit Industrieanwendung weisen eine Mess-Toleranz von ±2°C auf.\n",
     "\n",
@@ -64,18 +64,18 @@
     "\n",
     "#### Lösungsansatz ohne Machine Learning\n",
     "\n",
-    "Bisher wird die Temperatur des Permanentmagneten mit Thermoelementen direkt am Prüfstand gemessen. In einem rein regelbasierten System könnten Grenzwerte überwacht und bei Überschreitung automatisch die Leistung gedrosselt werden. Alternativ wäre denkbar, einfache physikalische Modelle (z. B. basierend auf Energieverlusten durch Stromfluss, Wärmeübertragung und Umgebungstemperatur) zu verwenden, um Temperaturentwicklungen zu schätzen. Diese Modelle wären jedoch stark vereinfacht und schwer auf unterschiedliche Lastprofile übertragbar.\n",
+    "Bisher wird die Temperatur des Permanentmagneten mit Thermokopplern direkt am Prüfstand gemessen. In einem rein regelbasierten System könnten Grenzwerte überwacht und bei Überschreitung automatisch die Leistung gedrosselt werden. Alternativ wäre denkbar, einfache physikalische Modelle (z. B. basierend auf Energieverlusten durch Stromfluss, Wärmeübertragung und Umgebungstemperatur) zu verwenden, um Temperaturentwicklungen zu schätzen. Diese Modelle wären jedoch stark vereinfacht und schwer auf unterschiedliche Lastprofile übertragbar.\n",
     "\n",
     "\n",
     "\n",
     "#### Annahmen (Assumtions)\n",
     "\n",
     "- Supervised Learning: Es liegen gelabelte Trainingsdaten des Zielwerts `pm` vor.\n",
-    "- Offline / Batch Learning: Das Modell wird auf einem statischen Datensatz trainiert, da alle Daten in den Speicher passen und kein kontinuirlicher Datenstrom erwartet wird\n",
+    "- Offline / Batch Learning: Das Modell wird auf einem statischen Datensatz trainiert, da alle Daten in den Speicher passen und kein kontinuierlicher Datenstrom erwartet wird.\n",
     "- Univariate Regression: Nur ein Zielwert (`pm`) wird vorhergesagt.\n",
-    "- Multiple Regressions Aufgabe: Da mehrer Eingangsgrößen zur Vorhersage verwendet werden.\n",
-    "- Keine defekten Motorzustände im Datensatz vorhanden.\n",
+    "- Multiple Regressions Aufgabe: Da mehrere Eingangsgrößen zur Vorhersage verwendet werden.\n",
     "- Alle Daten sind numerisch, keine kategorialen Features.\n",
+    "- Keine defekten Motorzustände im Datensatz vorhanden.\n",
     "- Die `profile_id` stellt unterschiedliche Testzyklen dar.   "
    ]
   },
@@ -740,7 +740,7 @@
     "---\n",
     "### 3. Datenexploration\n",
     "\n",
-    "#### Verteilung der Zielvgröße `pm` - Permanetmagnet-Temeperatur\n",
+    "#### Verteilung der Zielgröße `pm` - Permanetmagnet-Temperatur\n",
     "\n",
     "Die Verteilung der Zielgröße `pm` wird als Histogramm mit Dichtekurve dargestellt.  \n",
     "Dies hilft, mögliche Schieflagen, Ausreißer oder Auffälligkeiten zu erkennen."
@@ -1374,7 +1374,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 4. Daten Vorbereitung\n"
+    "### 4. Datenvorbereitung\n"
    ]
   },
   {
@@ -2394,7 +2394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "fcaef72a",
    "metadata": {},
    "outputs": [
@@ -2419,7 +2419,7 @@
     "print(\"Performance RMSE: \", lin_reg_rmse)\n",
     "\n",
     "# And cross-validate Model\n",
-    "lin_reg_results = evaluate_model_crossFold(lin_reg, motor_prepared, motor_pm_labels, cv=5, display=True)"
+    "lin_reg_results = evaluate_model_crossFold(lin_reg, motor_prepared, motor_pm_labels, cv=3, display=True)"
    ]
   },
   {
@@ -4754,7 +4754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "f10f602d",
    "metadata": {},
    "outputs": [
@@ -5225,14 +5225,14 @@
    "source": [
     "param_distribs = {\n",
     "    \"regressor\": [RandomForestRegressor(random_state=42)],\n",
-    "    \"regressor__n_estimators\": randint(low=1, high=10),\n",
+    "    \"regressor__n_estimators\": randint(low=1, high=20),\n",
     "    \"regressor__max_features\": randint(low=1, high=7),  # 1 to all Features\n",
     "}\n",
     "\n",
     "forest_rnd_search = RandomizedSearchCV(\n",
     "    pipeline,\n",
     "    param_distributions=param_distribs,\n",
-    "    n_iter=10,\n",
+    "    n_iter=8,\n",
     "    cv=3,\n",
     "    scoring=\"neg_mean_squared_error\",\n",
     "    random_state=42,\n",
@@ -5824,7 +5824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "32c2b7e9",
    "metadata": {},
    "outputs": [
@@ -6346,15 +6346,15 @@
    "source": [
     "param_distribs = {\n",
     "    \"regressor\": [MLPRegressor(random_state=42, max_iter=300)],\n",
-    "    \"regressor__hidden_layer_sizes\": [(5,), (10,), (20,), (50,), (100,)],\n",
+    "    \"regressor__hidden_layer_sizes\": [(10,), (50,), (100,)],\n",
     "    \"regressor__alpha\": uniform(0.001, 0.01)\n",
     "}\n",
     "\n",
     "ann_rnd_search = RandomizedSearchCV(\n",
     "    pipeline,\n",
     "    param_distributions=param_distribs,\n",
-    "    n_iter=4,\n",
-    "    cv=3,\n",
+    "    n_iter=3,\n",
+    "    cv=2,\n",
     "    scoring=\"neg_mean_squared_error\",\n",
     "    random_state=42,\n",
     ")\n",
@@ -6422,22 +6422,30 @@
       "c:\\Users\\fynnb\\OneDrive\\Dokumente\\BUHL\\TH_Koeln_PC\\Vorlesung\\Machine Learning\\Practical Lectures\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n",
       "c:\\Users\\fynnb\\OneDrive\\Dokumente\\BUHL\\TH_Koeln_PC\\Vorlesung\\Machine Learning\\Practical Lectures\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "c:\\Users\\fynnb\\OneDrive\\Dokumente\\BUHL\\TH_Koeln_PC\\Vorlesung\\Machine Learning\\Practical Lectures\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\fynnb\\OneDrive\\Dokumente\\BUHL\\TH_Koeln_PC\\Vorlesung\\Machine Learning\\Practical Lectures\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\fynnb\\OneDrive\\Dokumente\\BUHL\\TH_Koeln_PC\\Vorlesung\\Machine Learning\\Practical Lectures\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:698: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n",
+      "c:\\Users\\fynnb\\OneDrive\\Dokumente\\BUHL\\TH_Koeln_PC\\Vorlesung\\Machine Learning\\Practical Lectures\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:698: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
      ]
     }
    ],
    "source": [
     "param_grid = {\n",
     "    \"regressor\": [MLPRegressor(random_state=42, max_iter=300)],\n",
-    "    \"regressor__hidden_layer_sizes\": [(5,), (10,)],\n",
-    "    \"regressor__alpha\": [0.0005, 0.001],  # Regularization\n",
-    "    \"magnitude_attrib_adder__add_current_magnitude\": [True, False],\n",
+    "    \"regressor__hidden_layer_sizes\": [(75,), (125,)],\n",
+    "    \"regressor__alpha\": [0.001, 0.003],  # Regularization\n",
+    "    \"magnitude_attrib_adder__add_current_magnitude\": [True],\n",
     "}\n",
     "\n",
     "ann_grid_search = GridSearchCV(\n",
     "    pipeline,\n",
     "    param_grid,\n",
-    "    cv=3,\n",
+    "    cv=2,\n",
     "    scoring=\"neg_mean_squared_error\",\n",
     "    return_train_score=True,\n",
     ")\n",
