Bug Fixes - Final Code for Computation

--- a/Projekt_Gruppe9_MotorTemperatur.ipynb
+++ b/Projekt_Gruppe9_MotorTemperatur.ipynb
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "# Define the path where the data file is stored\n",
-    "DATA_PATH = \"./\"\n",
+    "DATA_PATH = \"./data/\"\n",
     "CSV_FILE = \"measures_v2.csv\"\n",
     "\n",
     "# Function to load motor data from a CSV file an retur an pandas DataFrame\n",
@@ -1674,6 +1674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "param_grid = {\n",
     "    \"regressor\": [LinearRegression()],\n",
     "    \"magnitude_attrib_adder__add_current_magnitude\": [True, False], # Try prediction with and without the extra Feature\n",
@@ -1687,7 +1688,19 @@
     "    return_train_score=True,\n",
     ")\n",
     "\n",
-    "lin_reg_grid_search.fit(motor, motor_pm_labels)"
+    "lin_reg_grid_search.fit(motor, motor_pm_labels)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Bundle everything in one object\n",
+    "tuned_lin_reg_model_package = {\n",
+    "    \"model\": lin_reg_grid_search.best_estimator_,\n",
+    "    \"hyperparams\": lin_reg_grid_search.best_params_,\n",
+    "    \"cv_results\": lin_reg_grid_search.cv_results_\n",
+    "}\n",
+    "\n",
+    "# Save model\n",
+    "joblib.dump(tuned_lin_reg_model_package, \"models/tuned_lin_reg.pkl\")"
    ]
   },
   {
@@ -1811,6 +1824,7 @@
     "    scoring=\"neg_mean_squared_error\",\n",
     "    random_state=42,\n",
     ")\n",
+    "\n",
     "forest_rnd_search.fit(motor, motor_pm_labels)"
    ]
   },
@@ -1857,7 +1871,20 @@
     "    scoring=\"neg_mean_squared_error\",\n",
     "    return_train_score=True,\n",
     ")\n",
-    "forest_grid_search.fit(motor, motor_pm_labels)"
+    "\n",
+    "forest_grid_search.fit(motor, motor_pm_labels)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Bundle everything in one object\n",
+    "tuned_forest_reg_model_package = {\n",
+    "    \"model\": forest_grid_search.best_estimator_,\n",
+    "    \"hyperparams\": forest_grid_search.best_params_,\n",
+    "    \"cv_results\": forest_grid_search.cv_results_\n",
+    "}\n",
+    "\n",
+    "# Save model\n",
+    "joblib.dump(tuned_forest_reg_model_package, \"models/tuned_forest_reg.pkl\")"
    ]
   },
   {
@@ -1923,6 +1950,7 @@
     "    scoring=\"neg_mean_squared_error\",\n",
     "    random_state=42,\n",
     ")\n",
+    "\n",
     "ann_rnd_search.fit(motor, motor_pm_labels)\n"
    ]
   },
@@ -1965,7 +1993,20 @@
     "    scoring=\"neg_mean_squared_error\",\n",
     "    return_train_score=True,\n",
     ")\n",
-    "ann_grid_search.fit(motor, motor_pm_labels)\n"
+    "\n",
+    "ann_grid_search.fit(motor, motor_pm_labels)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Bundle everything in one object\n",
+    "tuned_ann_model_package = {\n",
+    "    \"model\": ann_grid_search.best_estimator_,\n",
+    "    \"hyperparams\": ann_grid_search.best_params_,\n",
+    "    \"cv_results\": ann_grid_search.cv_results_\n",
+    "}\n",
+    "\n",
+    "# Save model\n",
+    "joblib.dump(tuned_ann_model_package, \"models/tuned_ann_reg.pkl\")"
    ]
   },
   {
